2016-02-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-05-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xpdfopen-0.86 (into versioned subdirectory).
	* version.ac: New file defining the xpdfopen version.
	* Makefile.am, configure.ac: Adapted.

2014-05-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xpdfopen-0.84.
	* configure.ac: Adapted.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Moved Makefile fragments to ../../am/.

2012-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-03-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c: Move extern decl from here ...
	* utils.h: ... to here.

2012-01-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xpdfopen-0.83.
	* configure.ac: Adapted.

2011-05-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xpdfopen-0.82.
	* configure.ac: Adapted.

2011-05-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xpdfopen-0.81.
	* configure.ac: Adapted.

2009-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* pdfopen.c: Use strdup'ed literal string (malloc+strcpy) to
	initialize non-constant string.
	* sendx.[ch]: Constify string args of all functions.
	Consistently use wname for window name string param.
	(close_channel): ANSI C function definition.


2009-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS), configure.ac: Enable compiler warnings.
	* pdfopen.c (usage), pdfclose.c (usage): Declare as static.

	* sendx.h (new): Declare prototypes for functions in sendx.c.
	* Makefile.am (pdfopen_SOURCES, pdfclose_SOURCES): Add sendx.h.
	* pdfopen.c, pdfclose.c, sendx.c: #include "sendx.h".
